--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 <body>
 <style type="text/css">
 	.container{
-		width: auto; white-space: nowrap
+		width: auto; 
+		white-space: nowrap;
 	}
 	.col-md-3 {
-		width: 300px;
+		width: 350px;
 		float:none;
 		display: inline-block;
+		white-space: normal;
+		vertical-align: top;
 	}
 	.newTask{
 		padding-bottom: 10px;
@@ -24,35 +27,36 @@
 	}
 </style>
   <div class="container">
-  <h1>My Task list</h1>
+  <br/>
   	<!-- ko foreach: lists -->
   	<div class="col-md-3">
 
-  	  <h2 data-bind="visible: !editingTitle()"><span data-bind="text: listTitle"></span> <a class="btn btn-link pull-right" href="#" role="button" data-bind="click: editTitle"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></h2>
-
-  	  <form class="form-inline" data-bind="submit: saveTitle, visible: editingTitle()">
-      	<input type="text" class="form-control" data-bind="value: listTitle" />
-      	<button type="submit" class="btn btn-default">Save</button>
-	  </form>
-
-  	  <div class="thumbnail">
-	  <div class="newTask">
-  	  <form class="form-inline" data-bind="submit: addTask">
-      	<input type="text" class="form-control" data-bind="value: newTask" placeholder="New Task" />
-      	<button type="submit" class="btn btn-default">Add</button>
-	  </form>
-	  </div>
-      <table class="table">
-      	<tbody>
+	  <div class="panel panel-primary"> 
+	  	<div class="panel-heading">
+	  		<h3 class="panel-title" data-bind="visible: !editingTitle(), click: editTitle">
+	  			<span data-bind="text: listTitle"></span>
+	  		</h3>
+	  		<form class="form-inline" data-bind="submit: saveTitle, visible: editingTitle()">
+		    	<input type="text" class="form-control" data-bind="value: listTitle" />
+		    	<button type="submit" class="btn btn-default">Save</button>
+		  	</form>
+	  	</div>
       	<!-- ko foreach:tasks -->
-      	<tr><td>
+      	<div class="panel-body">
       	<span data-bind="text: $data"></span>
-      	<a class="btn btn-default pull-right" href="#" role="button" data-bind="click: $parent.removeTask"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
-      	</td></tr>
+      	<a class="btn btn-link pull-right" href="#" role="button" data-bind="click: $parent.removeTask"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
+      	</div>
       	<!-- /ko -->
-      	</tbody>
-      </table>
-  	  </div>
+      	<div class="panel-footer">
+      		<h3 class="panel-title" data-bind="visible: !addingNewTask(), click: addNewTask">
+	  			New task
+	  		</h3>
+	  		<form class="form-inline" data-bind="submit: saveNewTask, visible: addingNewTask()">
+		      	<input type="text" class="form-control" data-bind="value: newTask" placeholder="New Task" />
+		      	<button type="submit" class="btn btn-default pull-right">Add</button>
+			</form>
+      	</div>
+      	</div>
 
 	</div>
   	<!-- /ko -->
